--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <!-- Additional SEO and Performance -->
     <link rel="canonical" href="https://free-bmi-calculator.netlify.app/">
     <link rel="alternate" type="application/rss+xml" title="Free BMI Calculator RSS"
-        href="https://free-bmi-calculator.netlify.app/public/rss.xml">
-    <link rel="author" href="https://free-bmi-calculator.netlify.app/public/humans.txt">
+        href="https://free-bmi-calculator.netlify.app/rss.xml">
+    <link rel="author" href="https://free-bmi-calculator.netlify.app/humans.txt">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
     <link rel="dns-prefetch" href="https://unpkg.com">
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="public/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,6 +79,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/mobile-fixes.css">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -86,7 +87,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "Free BMI Calculator",
-      "description": "Free online BMI calculator for checking your Body Mass Index instantly. Calculate BMI with multiple units, get health insights, and track your wellness journey.",
+      "description": "Free online BMI calculator with interactive unit converters. Calculate BMI with multiple units, convert between metric and imperial measurements, and track your health journey.",
       "url": "https://free-bmi-calculator.netlify.app/",
       "applicationCategory": "HealthApplication",
       "operatingSystem": "Web Browser",
@@ -286,26 +287,21 @@
                     <div>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3">Gender</label>
                         <div class="grid grid-cols-2 gap-3">
-                            <label class="relative">
-                                <input type="radio" name="gender" value="male" class="sr-only peer" required>
-                                <div
-                                    class="p-3 rounded-lg border-2 border-green-300 dark:border-gray-600 cursor-pointer hover:border-green-500 dark:hover:border-green-400 peer-checked:border-green-500 dark:peer-checked:border-green-400 peer-checked:bg-green-50 dark:peer-checked:bg-green-900/20 transition-all duration-200">
-                                    <div class="flex items-center justify-center space-x-2">
-                                        <i data-lucide="user" class="h-4 w-4"></i>
-                                        <span class="font-medium">Male</span>
-                                    </div>
+                            <button type="button" id="genderMaleBtn" data-gender="male" 
+                                class="gender-btn p-3 rounded-lg border-2 border-green-300 dark:border-gray-600 cursor-pointer hover:border-green-500 dark:hover:border-green-400 transition-all duration-200">
+                                <div class="flex items-center justify-center space-x-2">
+                                    <i data-lucide="user" class="h-4 w-4"></i>
+                                    <span class="font-medium">Male</span>
                                 </div>
-                            </label>
-                            <label class="relative">
-                                <input type="radio" name="gender" value="female" class="sr-only peer" required>
-                                <div
-                                    class="p-3 rounded-lg border-2 border-green-300 dark:border-gray-600 cursor-pointer hover:border-green-500 dark:hover:border-green-400 peer-checked:border-green-500 dark:peer-checked:border-green-400 peer-checked:bg-green-50 dark:peer-checked:bg-green-900/20 transition-all duration-200">
-                                    <div class="flex items-center justify-center space-x-2">
-                                        <i data-lucide="user" class="h-4 w-4"></i>
-                                        <span class="font-medium">Female</span>
-                                    </div>
+                            </button>
+                            <button type="button" id="genderFemaleBtn" data-gender="female"
+                                class="gender-btn p-3 rounded-lg border-2 border-green-300 dark:border-gray-600 cursor-pointer hover:border-green-500 dark:hover:border-green-400 transition-all duration-200">
+                                <div class="flex items-center justify-center space-x-2">
+                                    <i data-lucide="user" class="h-4 w-4"></i>
+                                    <span class="font-medium">Female</span>
                                 </div>
-                            </label>
+                            </button>
+                            <input type="hidden" id="genderInput" name="gender" value="" required>
                         </div>
                     </div>
 
@@ -899,6 +895,20 @@
 
     <!-- JavaScript -->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/gender-buttons.js"></script>
+
+    <!-- Service Worker Registration -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/assets/js/sw.js').then(registration => {
+                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }).catch(err => {
+                    console.log('ServiceWorker registration failed: ', err);
+                });
+            });
+        }
+    </script>
 </body>
 
 </html>
