--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
     <meta name="twitter:image" content="https://free-bmi-calculator.netlify.app/assets/images/og-image.jpg">
     <meta name="twitter:image:alt" content="BMI Calculator 2025 - Free Health Assessment Tool">
 
+
+    <!-- search console -->
+     <meta name="google-site-verification" content="VaitrFP6BK1LpbGgIGRHBr5YSIzDmip54v4dHzpSIww" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/icons/favicon.png">
     <link rel="apple-touch-icon" href="assets/icons/favicon.png">
