--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
     <!-- search console -->
     <meta name="google-site-verification" content="VaitrFP6BK1LpbGgIGRHBr5YSIzDmip54v4dHzpSIww" />
+    <meta name="google-site-verification" content="vmxOCqmOsH0U9nTzerAaPiEbTq8-m4-P_6B97jMVZpg" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/icons/favicon.png">
