Missing Braces added

--- a/index.html
+++ b/index.html
@@ -485,6 +485,8 @@
           "name": "Is this BMI calculator free to use?",
           "acceptedAnswer": {
             "@type": "Answer",
+            "text": "Yes, our BMI calculator is completely free to use with no registration required. There are no hidden fees, premium features, or subscription costs. You can calculate your BMI unlimited times, use all unit converters, and access health recommendations at no cost."
+          }
         }
       ]
     }
