--- a/index.html
+++ b/index.html
@@ -261,25 +261,6 @@
         "url": "https://free-bmi-calculator.netlify.app/",
         "applicationCategory": "HealthApplication",
         "operatingSystem": "Any",
-<<<<<<< HEAD
-        "offers": {
-          "@type": "Offer",
-          "price": "0",
-          "priceCurrency": "USD",
-          "availability": "https://schema.org/InStock",
-          "priceValidUntil": "2026-12-31"
-        },
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "4.9",
-          "ratingCount": "2847",
-          "bestRating": "5",
-          "worstRating": "1"
-        },
-        "applicationCategory": "HealthApplication",
-        "operatingSystem": "Any",
-=======
->>>>>>> 6a8c2940aa22280f38c9084beda8fd861aea8366
         "browserRequirements": "Requires JavaScript",
         "softwareVersion": "1.0.0",
         "offers": {
@@ -1078,8 +1059,7 @@
                 {
                     "@context": "https://schema.org",
                     "@type": "FAQPage",
-                    "mainEntity": [
-                        {
+                    "mainEntity": [{
                             "@type": "Question",
                             "name": "What is BMI (Body Mass Index)?",
                             "acceptedAnswer": {
