--- a/index.html
+++ b/index.html
@@ -255,10 +255,11 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": ["WebApplication", "SoftwareApplication"],
+  "@type": "SoftwareApplication",
   "@id": "https://free-bmi-calculator.netlify.app/#app",
+  "additionalType": "https://schema.org/WebApplication",
   "name": "Free BMI Calculator Online",
-  "description": "Free online BMI calculator with unit conversion tools, instant results, and health recommendations.",
+  "description": "Calculate your BMI with our fast, accurate, and free calculator. Get instant results with weight category and health recommendations.",
   "url": "https://free-bmi-calculator.netlify.app/",
   "applicationCategory": "HealthApplication",
   "operatingSystem": "Any",
@@ -312,6 +313,7 @@
   ]
 }
 </script>
+
 
 
    <!-- Website Schema -->
