--- a/index.html
+++ b/index.html
@@ -254,13 +254,12 @@
    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "SoftwareApplication",
-  "additionalType": "WebApplication",
+  "@type": "WebApplication",
   "name": "Free BMI Calculator Online",
   "description": "Calculate your BMI with our fast, accurate, and free calculator. Get instant results with weight category and health recommendations.",
   "url": "https://free-bmi-calculator.netlify.app/",
   "applicationCategory": "HealthApplication",
-  "operatingSystem": "Any",
+  "operatingSystem": ["Windows", "macOS", "iOS", "Android", "Linux"],
   "browserRequirements": "Requires JavaScript",
   "softwareVersion": "2.0",
   "offers": {
@@ -311,10 +310,10 @@
   },
   "aggregateRating": {
     "@type": "AggregateRating",
-    "ratingValue": "4.9",
-    "ratingCount": "2847",
-    "bestRating": "5",
-    "worstRating": "1"
+    "ratingValue": 4.9,
+    "ratingCount": 2847,
+    "bestRating": 5,
+    "worstRating": 1
   }
 }
 </script>
