--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="BMI Calculator">
 
+    <!-- Additional Indexing Signals -->
+    <meta name="page-topic" content="Health and Fitness">
+    <meta name="page-type" content="Calculator Tool">
+    <meta name="audience" content="General Public">
+    <meta name="coverage" content="Worldwide">
+    <meta name="classification" content="Health Calculator">
+    <meta name="subject" content="Body Mass Index Calculation">
+    <meta name="copyright" content="Free BMI Calculator 2025">
+    <meta name="web_author" content="Sowrav Hasan">
+    <meta name="reply-to" content="health@free-bmi-calculator.netlify.app">
+    <meta name="owner" content="Free BMI Calculator">
+    <meta name="url" content="https://free-bmi-calculator.netlify.app/">
+    <meta name="identifier-URL" content="https://free-bmi-calculator.netlify.app/">
+    <meta name="category" content="Health Tools">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="target" content="all">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="mobile-web-app-capable" content="yes">
+
     <!-- Performance & Speed Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -251,7 +273,7 @@
     <link rel="stylesheet" href="assets/css/dark-mode-enhancements.css">
 
     <!-- Enhanced Structured Data for Better SEO -->
-   <script type="application/ld+json">
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -259,70 +281,80 @@
   "description": "Calculate your BMI with our fast, accurate, and free calculator. Get instant results with weight category and health recommendations.",
   "url": "https://free-bmi-calculator.netlify.app/",
   "applicationCategory": "HealthApplication",
-  "operatingSystem": ["Windows", "macOS", "iOS", "Android", "Linux"],
-  "browserRequirements": "Requires JavaScript",
+  "operatingSystem": "All",
+  "browserRequirements": "Requires JavaScript. Works on any device with a web browser.",
   "softwareVersion": "2.0",
   "offers": {
     "@type": "Offer",
     "price": "0",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "priceValidUntil": "2026-12-31"
+    "priceValidUntil": "2026-12-31",
+    "validFrom": "2025-01-01",
+    "seller": {
+      "@type": "Organization",
+      "name": "Free BMI Calculator",
+      "url": "https://free-bmi-calculator.netlify.app/"
+    }
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "ratingCount": "2500",
+    "bestRating": "5",
+    "worstRating": "1",
+    "reviewCount": "2500"
   },
   "author": {
     "@type": "Person",
     "name": "Sowrav Hasan",
-    "url": "https://sowravhasan.vercel.app",
-    "sameAs": [
-      "https://linkedin.com/in/sowrav-hasan",
-      "https://github.com/sowravhasan"
-    ]
+    "url": "https://sowravhasan.vercel.app"
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Sowrav Hasan",
-    "url": "https://sowravhasan.vercel.app",
+    "name": "Free BMI Calculator",
+    "url": "https://free-bmi-calculator.netlify.app/",
     "logo": {
       "@type": "ImageObject",
       "url": "https://free-bmi-calculator.netlify.app/assets/icons/favicon.png",
-      "width": "512",
-      "height": "512"
+      "width": 512,
+      "height": 512
     }
   },
   "datePublished": "2025-01-01",
-  "dateModified": "2025-09-03",
+  "dateModified": "2025-09-04",
   "inLanguage": "en-US",
   "isAccessibleForFree": true,
   "featureList": [
-    "✓ Instant Results",
-    "✓ Mobile Friendly",
-    "✓ 100% Free",
-    "✓ Multiple Unit Support",
-    "✓ Health Recommendations",
-    "✓ BMI Progress Tracking",
-    "✓ Dark/Light Mode"
+    "Instant Results",
+    "Mobile Friendly", 
+    "100% Free",
+    "Multiple Unit Support",
+    "Health Recommendations",
+    "BMI Progress Tracking",
+    "Dark/Light Mode"
   ],
-  "image": {
+  "screenshot": {
     "@type": "ImageObject",
     "url": "https://free-bmi-calculator.netlify.app/assets/images/og-image.jpg",
-    "width": "1200",
-    "height": "630"
+    "width": 1200,
+    "height": 630
   },
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": 4.9,
-    "ratingCount": 2847,
-    "bestRating": 5,
-    "worstRating": 1
-  }
+  "installUrl": "https://free-bmi-calculator.netlify.app/",
+  "permissions": "No special permissions required",
+  "downloadUrl": "https://free-bmi-calculator.netlify.app/",
+  "requirements": "Web browser with JavaScript enabled",
+  "memoryRequirements": "Minimal",
+  "processorRequirements": "Any",
+  "storageRequirements": "None - runs in browser"
 }
 </script>
 
 
 
 
-   <!-- Website Schema -->
-<script type="application/ld+json">
+    <!-- Website Schema -->
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
@@ -344,7 +376,7 @@
 
 
     <!-- Organization Schema -->
-<script type="application/ld+json">
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
@@ -372,8 +404,8 @@
 </script>
 
 
-   <!-- How-To Schema -->
-<script type="application/ld+json">
+    <!-- How-To Schema -->
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "HowTo",
@@ -428,8 +460,8 @@
 }
 </script>
 
-   <!-- Breadcrumb Schema -->
-<script type="application/ld+json">
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
@@ -1162,6 +1194,115 @@
                             doesn't account for age, gender, bone density, or body composition. BMI may not be accurate
                             for athletes, elderly individuals, pregnant women, or children. Always consult a healthcare
                             professional for personalized health assessment.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Educational Content Section for Better Indexing -->
+        <section
+            class="bg-gradient-to-br from-blue-50 to-green-50 dark:from-gray-800 dark:to-gray-900 rounded-xl shadow-lg p-4 md:p-6 mb-8 border border-blue-200 dark:border-gray-700 mx-2">
+            <div class="flex items-center space-x-2 mb-6">
+                <i data-lucide="book-open" class="h-5 w-5 text-blue-600 dark:text-blue-400"></i>
+                <h2 class="text-xl md:text-2xl font-bold">Understanding BMI: Complete Guide</h2>
+            </div>
+
+            <div class="grid md:grid-cols-2 gap-6">
+                <!-- BMI History and Science -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-4 shadow-md">
+                    <h3 class="text-lg font-semibold text-blue-700 dark:text-blue-300 mb-3 flex items-center">
+                        <i data-lucide="flask" class="h-4 w-4 mr-2"></i>
+                        The Science Behind BMI
+                    </h3>
+                    <div class="text-sm text-gray-600 dark:text-gray-300 space-y-3">
+                        <p>Body Mass Index (BMI) was developed in the 1830s by Belgian mathematician Adolphe Quetelet.
+                            Originally called the "Quetelet Index," it became widely adopted by healthcare professionals
+                            as a simple screening tool for weight categories.</p>
+                        <p>The BMI formula uses the relationship between height and weight to estimate body fat. While
+                            not perfect, it provides a quick assessment that correlates with health risks in large
+                            populations.</p>
+                        <p><strong>Key Benefits:</strong></p>
+                        <ul class="list-disc list-inside space-y-1 ml-2">
+                            <li>Quick and easy to calculate</li>
+                            <li>Universally recognized standard</li>
+                            <li>Good population-level indicator</li>
+                            <li>Cost-effective screening tool</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- BMI Limitations and Alternatives -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-4 shadow-md">
+                    <h3 class="text-lg font-semibold text-amber-700 dark:text-amber-300 mb-3 flex items-center">
+                        <i data-lucide="alert-circle" class="h-4 w-4 mr-2"></i>
+                        BMI Limitations & Alternatives
+                    </h3>
+                    <div class="text-sm text-gray-600 dark:text-gray-300 space-y-3">
+                        <p>While BMI is useful, it has important limitations. It doesn't distinguish between muscle and
+                            fat, making it less accurate for athletes, bodybuilders, or elderly individuals.</p>
+                        <p><strong>BMI Limitations:</strong></p>
+                        <ul class="list-disc list-inside space-y-1 ml-2">
+                            <li>Doesn't measure body composition</li>
+                            <li>May overestimate risk in muscular individuals</li>
+                            <li>May underestimate risk in elderly people</li>
+                            <li>Doesn't account for fat distribution</li>
+                        </ul>
+                        <p><strong>Better Alternatives:</strong></p>
+                        <ul class="list-disc list-inside space-y-1 ml-2">
+                            <li>Waist-to-hip ratio</li>
+                            <li>Body fat percentage</li>
+                            <li>DEXA scans</li>
+                            <li>Bioelectrical impedance</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- BMI and Health Risks -->
+            <div class="mt-6 bg-white dark:bg-gray-800 rounded-lg p-4 shadow-md">
+                <h3 class="text-lg font-semibold text-red-700 dark:text-red-300 mb-3 flex items-center">
+                    <i data-lucide="heart" class="h-4 w-4 mr-2"></i>
+                    BMI Categories and Associated Health Risks
+                </h3>
+                <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-4 text-sm">
+                    <div
+                        class="bg-blue-50 dark:bg-blue-900/20 p-3 rounded-lg border border-blue-200 dark:border-blue-800">
+                        <h4 class="font-semibold text-blue-800 dark:text-blue-200 mb-2">Underweight (&lt; 18.5)</h4>
+                        <ul class="text-blue-700 dark:text-blue-300 space-y-1">
+                            <li>• Nutritional deficiencies</li>
+                            <li>• Weak immune system</li>
+                            <li>• Osteoporosis risk</li>
+                            <li>• Fertility issues</li>
+                        </ul>
+                    </div>
+                    <div
+                        class="bg-green-50 dark:bg-green-900/20 p-3 rounded-lg border border-green-200 dark:border-green-800">
+                        <h4 class="font-semibold text-green-800 dark:text-green-200 mb-2">Normal (18.5-24.9)</h4>
+                        <ul class="text-green-700 dark:text-green-300 space-y-1">
+                            <li>• Optimal health range</li>
+                            <li>• Lower disease risk</li>
+                            <li>• Better life expectancy</li>
+                            <li>• Maintained through diet & exercise</li>
+                        </ul>
+                    </div>
+                    <div
+                        class="bg-yellow-50 dark:bg-yellow-900/20 p-3 rounded-lg border border-yellow-200 dark:border-yellow-800">
+                        <h4 class="font-semibold text-yellow-800 dark:text-yellow-200 mb-2">Overweight (25.0-29.9)</h4>
+                        <ul class="text-yellow-700 dark:text-yellow-300 space-y-1">
+                            <li>• Increased diabetes risk</li>
+                            <li>• Higher blood pressure</li>
+                            <li>• Sleep apnea</li>
+                            <li>• Joint problems</li>
+                        </ul>
+                    </div>
+                    <div class="bg-red-50 dark:bg-red-900/20 p-3 rounded-lg border border-red-200 dark:border-red-800">
+                        <h4 class="font-semibold text-red-800 dark:text-red-200 mb-2">Obese (≥ 30.0)</h4>
+                        <ul class="text-red-700 dark:text-red-300 space-y-1">
+                            <li>• Heart disease</li>
+                            <li>• Type 2 diabetes</li>
+                            <li>• Certain cancers</li>
+                            <li>• Stroke risk</li>
+                        </ul>
                     </div>
                 </div>
             </div>
